# it-inno-hack

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: docker.yaml
docker/: docker-compose.yaml
docker/input_data/: main1.csv.dvc  main2.csv.dvc  main3.csv.dvc
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: click.ipynb  splink.ipynb
record_linkage/: __init__.py  dataset.py  features.py  plots.py
record_linkage/modeling/: predict.py  train.py
src/: __init__.py  config.py  dataset.py
src/modeling/: train.py
