[tool.poetry]
name = "innohack"
version = "0.1.0"
description = ""
authors = [
  "Egor Tarasov", "Danilo Malbashich"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
pip = "^24.2"
pandas = "^2.2.3"
loguru = "^0.7.2"
tqdm = "^4.66.5"
splink = "^4.0.2"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
black = "^24.8.0"
pylint = "^3.3.1"
isort = "^5.13.2"
notebook = "^7.2.2"
jupyterlab = "^4.2.5"
ipython = "^8.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["record_linkage"]
force_sort_within_sections = true




